Parallelize Storage Table Writes
It turns out that today we perform write operations to Azure Storage Table serially.  This incurs pretty massive performance costs.  I've done spot checking (by temporarily modifying connected tests) and the time to insert 10K records was taking roughly 90 seconds.  With this change (which parallelizes over 1000 threads) the time drops to roughly 15 seconds.

Existing unit and connected test ensure the continued proper behavior of the system